z-index fix and struggling with style

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,22 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;600&family=Titan+One&display=swap');
 
-#splash-container{
+#splash-container {
     background-color: #414eed;
     height: 70vh;
     display: flex;
     justify-content: center;
 }
 
-#splash-top-bar{
+#splash-top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
     width: 1180px;
     height: fit-content;
+    z-index: 1;
 }
 
-#logo-title-container{
+#logo-title-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -24,42 +25,43 @@
     width: 260px;
 }
 
-#discordance-logo{
+#discordance-logo {
     height: 40px;
     width: 40px;
 }
 
-#splash-title{
+#splash-title {
     margin: 0;
     font-family: 'Titan One', cursive;
     color: white;
 }
 
-#login-button{
+#login-button {
     background-color: white;
     border-radius: 20px;
     border: none;
     padding: 10px;
     z-index: 1;
 }
-#login-button:hover{
+
+#login-button:hover {
     cursor: pointer;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.178);
 }
 
-#splash-center{
+#splash-center {
     position: absolute;
     width: 100vw;
     bottom: 30vh;
 }
 
-#splash-left{
+#splash-left {
     position: absolute;
     right: -150px;
     bottom: 30vh;
 }
 
-#splash-right{
+#splash-right {
     position: absolute;
     left: -250px;
     bottom: 30vh;
